#1506 Fix when click on 'Export' the cancel button jump and resize the pop up

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -1631,6 +1631,9 @@ a.ui-select-choices-row-inner {
   background-color: @moss !important;
 }
 
+.modal-content {
+  width: 450px;
+}
 .export-form {
   background-color: @echo !important;
   border-radius: 10px;
